# learnOpenGL

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: glfw3.h.B154A86F033DDDBA.idx  main.cpp.B7C93FBEBDBB4BC8.idx
Hazel/: hazel.h
app/: CMakeLists.txt  hazelApp.cpp
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
include/: Application.h
src/: Application.cpp  main.cpp
